--- a/templates/rango/index.html
+++ b/templates/rango/index.html
@@ -1,12 +1,10 @@
-<!DOCTYPE html>
-{% load staticfiles %} <!-- New line -->
-<html>
+{% extends 'rango/base.html' %}
+{% load staticfiles %}
+{% block title_block %}
+    Homepage
+{% endblock %}
 
-    <head>
-        <title>Rango</title>
-    </head>
-
-    <body>
+{% block body_block %}
         <h1>Rango says...</h1>
         <div>
             hey there partner! <br />
@@ -29,9 +27,7 @@
             {% endif %}
         </div>
 
-
             <h2>Most Viewed Pages</h2>
-
 
         <div>
             {% if pages%}
@@ -47,21 +43,10 @@
             {% endif %}
         </div>
 
-        </div>
-
-
-
-
-
-
-
-
         <div>
-            <a href="/rango/about/">About Rango</a><br />
-            <a href="/rango/add_category/">Add a New Category</a><br />
             <img src="{% static 'images/rango.jpg' %}"
                  alt="Picture of Rango" /> <!-- New line -->
 
         </div>
     </body>
-</html>
+{% endblock %}
